content/relayer/1.4.x/zama-fhevm.mdx
---
title: Zama FHEVM Integration
---

## Overview

OpenZeppelin Relayer supports interacting with [Zama FHEVM](https://docs.zama.org/protocol) contracts — EVM smart contracts that operate on Fully Homomorphic Encryption (FHE) ciphertexts. The relayer provides two capabilities that FHEVM applications need from a backend:

- **Transaction submission** for encrypted contract calls (e.g. submitting an `increment()` with an encrypted input).
- **EIP-712 typed-data signing** for authorizing user decryption requests against the Zama Gateway.

Because FHEVM contracts live on standard EVM networks, a Zama FHEVM relayer is configured as a regular `evm` relayer. Encryption and decryption are handled by the [Zama Relayer SDK](https://docs.zama.org/protocol/relayer-sdk-guides) running in your application; the OpenZeppelin Relayer only deals with on-chain transactions and typed-data signatures.

<Callout>
The FHE encryption/decryption primitives run in your application using the Zama SDK. The OpenZeppelin Relayer is not aware of FHE cleartexts and never handles the decryption keypair.
</Callout>

## Features

- End-to-end encrypted contract calls via the standard EVM `sendTransaction` API
- EIP-712 signing via `signTypedData` for user decryption authorization
- Works on any FHEVM-enabled EVM network (Sepolia testnet, Ethereum mainnet)
- All existing EVM features: gas management, EIP-1559, transaction status tracking, signer backends, policies, and observability

## Supported Networks

Zama FHEVM is available on EVM networks where the FHE coprocessor is deployed. At the time of writing, this includes:

- Ethereum Sepolia (testnet)
- Ethereum Mainnet (requires a Zama Gateway API key)

Because the relayer treats these as regular EVM networks, any network configuration that works for EVM will work here. See the [Network Configuration](/relayer/network_configuration) guide for the full list of options.

## Supported Signers

All EVM signers are supported:

- `local` (local keystore files)
- `vault` (HashiCorp Vault secret storage)
- `vault_cloud` (hosted HashiCorp Vault)
- `turnkey` (hosted Turnkey signer)
- `google_cloud_kms` (Google Cloud KMS)
- `aws_kms` (Amazon AWS KMS)
- `cdp` (hosted Coinbase Developer Platform signer)

For signer configuration details, see the [Signers](/relayer/configuration/signers) guide.

<Callout>
For production, prefer hosted signers (AWS KMS, Google Cloud KMS, Turnkey, CDP). The relayer's signer is used both to sign the on-chain encrypted transactions and the EIP-712 payloads consumed by the Zama Gateway, so key availability and security apply to both flows.
</Callout>

## Quickstart

Example relayer configuration for a Sepolia FHEVM relayer:

```json
{
  "id": "zama-sepolia",
  "name": "Zama FHEVM Sepolia",
  "network": "sepolia",
  "paused": false,
  "signer_id": "local-signer",
  "network_type": "evm"
}
```

Once the relayer is running, you will typically:

1. Create a Zama FHE instance in your application using the Zama Relayer SDK.
2. Read encrypted state from your FHEVM contract via an RPC call.
3. Decrypt the state publicly, or fall back to user decryption authorized by an EIP-712 signature from the relayer.
4. Encrypt any inputs locally with the Zama SDK.
5. Submit the encrypted transaction through the OpenZeppelin Relayer.

For a full working walkthrough, see the [Zama FHEVM Counter Guide](/relayer/guides/zama-fhevm-counter-guide).

## How The Relayer Fits Into An FHEVM Flow

A typical FHEVM call with OpenZeppelin Relayer has four moving parts:

- **Your application**: orchestrates encryption, decryption, and calls to the relayer.
- **Zama Relayer SDK**: encrypts inputs, generates decryption keypairs, and builds EIP-712 payloads for user decryption.
- **OpenZeppelin Relayer**:
  - signs and submits the encrypted transaction on-chain,
  - signs EIP-712 payloads for user decryption via `signTypedData`.
- **FHEVM contract**: stores encrypted state on the EVM network.

The relayer never encrypts or decrypts data. It only performs two things that require the relayer's key material: sending the encrypted transaction and signing the EIP-712 message that authorizes the Zama Gateway to return a user decryption.

## Decryption Model

Zama FHEVM contracts support two decryption paths:

- **Public decryption**: used when an encrypted handle is flagged as publicly decryptable. The Zama SDK can decrypt it directly, with no authorization from the relayer.
- **User decryption**: used when decryption requires authorization. The Zama SDK builds an EIP-712 payload, and the relayer signs it with `signTypedData`. The resulting signature is then passed to `userDecrypt` on the SDK, which retrieves the cleartext from the Zama Gateway.

Applications typically try public decryption first and fall back to user decryption.

## Mainnet Usage

Running on Ethereum mainnet requires:

- A Zama FHEVM Gateway API key (see the [Zama mainnet API key guide](https://docs.zama.org/protocol/relayer-sdk-guides/fhevm-relayer/mainnet-api-key)).
- The Zama SDK configured with `MainnetConfig` and the API key.
- The relayer pointed at an Ethereum mainnet RPC.

The FHEVM flow itself does not change between testnet and mainnet; only the Zama SDK configuration and network selection differ.

## API Reference

The relayer endpoints most relevant to FHEVM flows are:

| Method | Purpose |
| --- | --- |
| [Send Transaction](/relayer/api/sendTransaction) | Submit an encrypted FHEVM contract call on-chain |
| [Sign Typed Data](/relayer/api/signTypedData) | Sign the EIP-712 payload used for user decryption |
| [Get Relayer](/relayer/api/getRelayer) | Retrieve the relayer address (needed for Zama user decryption) |
| [Get Transaction by ID](/relayer/api/getTransactionById) | Poll for transaction status after submission |

See the [API Reference](./api) for complete method documentation.

## Example

The OpenZeppelin Relayer SDK ships with a working Zama FHEVM example:

- [examples/relayers/zama](https://github.com/OpenZeppelin/openzeppelin-relayer-sdk/tree/main/examples/relayers/zama) — end-to-end counter example using the Sepolia testnet.

The example contract is deployed from [Zama's fhevm-hardhat-template](https://github.com/zama-ai/fhevm-hardhat-template).

## Security

- Do not expose the relayer directly to the public internet.
- Deploy behind a secure backend (reverse proxy, firewall).
- Use hosted signers in production. The relayer signer is used both for on-chain submission and for EIP-712 signing consumed by the Zama Gateway, so key availability and audit trails matter for both.
- Never hand a decryption keypair's private key to the relayer. The decryption keypair is an application-side secret.

## Additional Resources

- [Zama Relayer SDK Guides](https://docs.zama.org/protocol/relayer-sdk-guides)
- [Zama fhevm-hardhat-template](https://github.com/zama-ai/fhevm-hardhat-template)
- [Zama FHEVM Counter Guide](/relayer/guides/zama-fhevm-counter-guide)
- [OpenZeppelin Relayer SDK — Zama example](https://github.com/OpenZeppelin/openzeppelin-relayer-sdk/tree/main/examples/relayers/zama)

## Support

For help, join our [Telegram](https://t.me/openzeppelin_tg/2) or open an issue on GitHub.
